# Bibliometrics-Data

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.toml
src/: data_integration.py  descriptives.py  feature_extraction.py  scrape.py
src/utils/: load_config.py  setup_logging.py
