[project]
name = "AcademicAbstracts"
version = "0.2.1"
description = "Word embedding pipeline for acaedmic abstrats across time"
authors = [
    {name="Felix Noble", email="felix.noble@live.co.uk"}
    ]
requires-python = ">=3.10"

dependencies = [
"numpy",
"scikit-learn",
"pandas",
"toml",
"sentence-transformers",
"hf_xet",
"dask",
"dask[distributed]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

